--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ local.properties
 .target/
 
 # ignore properties file
-application.properties
+# application.properties
 
 # External tool builders
 .externalToolBuilders/
@@ -149,3 +149,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/git,java,maven,windows,eclipse
+.DS_Store
