--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/multi?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=Reter2123!
+spring.datasource.password=12345678
 
 # Swagger "Failed to start bean 'documentationPluginsBootstrapper'" fix
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
