--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/multi?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=1234
 
 # Swagger "Failed to start bean 'documentationPluginsBootstrapper'" fix
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
@@ -24,3 +24,6 @@ spring.jpa.show-sql=true
 #pring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.jpa.open-in-view = true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
