--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,5 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/git,java,maven,windows,eclipse
 .DS_Store
+src/main/resources/application.properties
+*.properties
